--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Week12Demo" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Week12Demo.</description>
+<project name="0307_w9_lab8_Security" default="default" basedir=".">
+    <description>Builds, tests, and runs the project 0307_w9_lab8_Security.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
